Bug 1195030 - Backout of bug 890329 for breaking email reading in gmail. r=bustage