js/src/builtin/Number.js
@@ -70,8 +70,8 @@ function Number_isSafeInteger(number) {
     if (integer !== number)
         return false;
 
-    // Step 5.
-    if (std_Math_abs(integer) <= 2 ** 53 - 1)
+    // Step 5. If abs(integer) <= 2**53 - 1, return true.
+    if (std_Math_abs(integer) <= 9007199254740991)
         return true;
 
     // Step 6.
